--- a/project.properties
+++ b/project.properties
@@ -11,7 +11,7 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=Google Inc.:Google APIs:21
-android.library.reference.1=../appcompat_v7
+target=Google Inc.:Google APIs:22
 android.library=false
-android.library.reference.2=../../../android-sdks/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.1=../appcompat_v7
+android.library.reference.2=../google-play-services_lib
